# huffman-coding

./: CMakeLists.txt  dictionary.txt  message.txt.out  shakespeare_dictionary.txt
src/: decode.cpp  encode.cpp  make_dictionary.cpp
